--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "jwt-decode": "^4.0.0",
     "next": "14.2.4",
     "react": "^18",
+    "react-credit-cards-2": "^1.0.2",
     "react-dom": "^18",
+    "sonner": "^1.5.0",
     "use-debounce": "^10.0.1"
   },
   "devDependencies": {
